# staticlinktest

./: CMakeLists.txt  staticlibtest.c  staticlibtest.h
